[project]
name = "bachelor-thesis"
version = "0.1.0"
description = "The Bachelor Thesis Project of Jord Cluitmans"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "scenic @ git+https://github.com/BerkeleyLearnVerify/Scenic",
    "pandas (==2.2.3)",
    "tqdm (==4.66.5)",
    "scikit-learn (==1.5.2)",
    "shapely (==2.0.6)",
    "numpy (==1.26.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
